<resources>
    <string name="app_name">Popular Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sort_key" translatable="false">sort_by</string>
    <string name="pref_sort_default" translatable="false">popularity.desc</string>
    <string name="title_activity_detail" translatable="false">Movie Detail</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="pref_units_label" translatable="false">SORT BY</string>

    <string name="pref_sort_label_popular" translatable="false">Most Popular</string>
    <string name="pref_sort_label_rated" translatable="false">Highest Rated</string>
    <string name="pref_sort_popular" translatable="false">popularity.desc</string>
    <string name="pref_sort_rated" translatable="false">vote_average.desc</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="loadingMSG">loading</string>
    <string name="share_links">Sharing Movie Details</string>
    <string name="about_text">\nLicensed under the Apache License v2.\n \t \t \t Source available on <a href="https://github.com/opticod/PopularMovies">GitHub</a>.\n</string>
    <string name="title_activity_about">About</string>
    <string name="app_logo">App Logo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="back">back</string>
    <string name="pref_description_enable_child_mode">Hiding adult rated movies or TV shows from lists.</string>
    <string name="pref_title_enable_child_mode">Enable child mode</string>
    <string name="pref_region">Select Region</string>
    <string name="pref_language">Select Language</string>
    <string name="pref_sort_favourite">s</string>
    <string name="no_data">NO DATA AVAILABLE</string>
    <string name="loading">Loading</string>
    <string name="tmdb_logo_attribution">TMDB Logo Attribution</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="empty">-</string>
    <string name="bookmarks_empty">NO BOOKMARKS ADDED</string>
    <string name="overview">Overview</string>
    <string name="featured_crew">Featured Crew</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="status">Status</string>
    <string name="original_language">Original Language</string>
    <string name="runtime">Runtime</string>
    <string name="homepage">Homepage</string>
    <string name="release_date">Release Date</string>
    <string name="genres">Genres</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="biography">Biography</string>
    <string name="pref_description_delete">Delete all saved bookmarks, database storage and cache.</string>
    <string name="network">Network</string>
    <string name="first_air_date">First air date</string>
    <string name="last_air_date">Last air date</string>
    <string name="seasons">Seasons</string>
    <string name="similar_tv_shows">Similar TV Shows</string>
    <string name="air_date">Air date</string>
    <string name="episodes">Episodes</string>
    <string name="vote_avg">Vote Average</string>
    <string name="guest_star">Guest Star</string>
    <string name="season_regulars">Season Regulars</string>
    <string name="youtube_not_installed">Sorry, Can\'t Play! YouTube is not installed on this device.</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="rate_now">RATE NOW</string>
    <string name="remind_me_later">REMIND ME LATER</string>
    <string name="dont_remind_me">DON\'T REMIND ME</string>
    <string name="rate_message">If you enjoy using OPTI MOVIES, please take a moment to rate it. Thanks for your support!</string>
    <string name="pref_description_review">Rate and review the app in Google play store.</string>

</resources>
