<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="child_mode"
        android:summary="@string/pref_description_enable_child_mode"
        android:title="@string/pref_title_enable_child_mode" />

    <ListPreference
        android:key="region"
        android:title="@string/pref_region" />

    <ListPreference
        android:key="language"
        android:title="@string/pref_language" />

    <Preference
        android:key="review"
        android:summary="@string/pref_description_review"
        android:title="Rate &amp; Review" />

    <Preference
        android:key="delete"
        android:summary="@string/pref_description_delete"
        android:title="Delete Database" />

</PreferenceScreen>